--- a/main.tex
+++ b/main.tex
@@ -51,8 +51,11 @@ process all files:}
 % \include{signature}
 \pagestyle{plain}
 \include{contents}
+\include{intro}
 \include{chap1}
 \include{chap2}
+\include{chap3}
+\include{concl}
 \appendix
 \include{appa}
 \include{appb}
