draft content added to ch 1, needs cutting

--- a/chap1.tex
+++ b/chap1.tex
@@ -1,4 +1,336 @@
 \chapter{Ideologies and Their Stakes}
 
-Text.
+Ideologies (and their stakes) (32 p)
+
+\subsection{Automation of Work}
+%% 1.1) deep history is the mechanization/automation of work (4 p)
+%% --going back to factories/IRev: replacing human competencies with
+%% machine competencies and moving the people into new roles
+%% --which engages old debates about the role of the human
+
+Human technological progress since antiquity has
+involved continual re-negotiations of human labor and the roles of
+animals and mechanisms in the labor process. Due to a confluence
+of factors—the continuing miniaturization of computing technology, new
+advances in machine learning and artificial intelligence algorithms, a
+gradual increase in battery capacities, faster wireless networks—the
+horizons for everyday automation are broader than ever. 
+
+The popular visions of this technology focus on the future: the
+idea that in just two decades the majority of cars on the road will be
+fully autonomous. Even respected business information and consulting
+bodies have bought into this dream.1 In these vehicles, the users would
+step in, select a destination, and would then be free to read, sleep,
+watch a movie, answer emails, or otherwise occupy themselves without
+needing to pay any attention to the operation of the vehicle. This
+vision has its benefits, but clearly makes many people nervous about
+ceding their driving agency to a computer system.2 News articles fret
+about what will happen when no one knows how to drive manually any
+more,3 a classic fear of “de-skilling” that is implicated in so many
+other implementations of computers. Furthermore, coexistence with
+autonomous or automated systems is presented as a fundamentally new
+situation, as if human beings had never before had to work and live
+with and next to automated systems, presenting new benefits and
+dangers, and requiring new roles for their human tenders.
+
+However, automation has a much deeper
+history in the industrial sector than it does in transportation or
+exploration. Current debates and fears about de-skilling, human jobs,
+and the role and value of human labor return us to questions that have
+plagued factories, and labor's relationship to machinery, since the
+early Industrial Revolution.
+
+Robotic cars are sometimes situated as
+the next step for robots after the factory, their final emergence into
+the real world having conquered the factory floor.1 But just what the
+processes of standardization, mechanization, and automation (or
+“automatization”) have done to the factory, and to laborers in it, is
+not clearly understood amongst autonomy researchers. Within this
+forgotten history—which is substituted for by an imagined person-less
+factory that does not exist in the real world—there are lessons to be
+learned by this research community. This past is relevant, perhaps
+more than ever, to the future of transportation.
+
+ Vaucanson's mechanical loom dates to 1741, and formed the basis of
+ later developments by Joseph Marie Jacquard.1
+
+The search for the first true example of industrial automation in the
+United States brings us back to Oliver Evans' work in the 1780s on
+automated grist mills.1 Through a series of elevators and descenders,
+horizontal screws, spreaders and rakes, his mill moved grain from raw
+agricultural commodity to finished product: sifted flour. And ideally,
+all parts of the process would occur without human intervention. In
+reality, the process both increased efficiency and decreased the costs
+of production, so much so that the same basic machinery is still in
+use today in some smaller milling operations.2 None of his individual
+inventions—which he lists as the elevator, “conveyer,” hopper-boy,
+drill, and descender in his 1795 miller's guide—was a particularly
+groundbreaking achievement, but what Evans did was place these devices
+in succession so as to allow continuous production, and the
+elimination of many slow human jobs that degraded the quality of the
+product by tracking dirt and contaminants around inside the mill.3 
+
+It took some time for the high level of automation found in the Evans
+mill to spread across other industries, and the mill may find its
+closest cousins in the “automatic” factories of the 1950s and 1960s
+and the roboticized factories of today, but Evans's contemporaries
+were not uninterested in increasing efficiency and output. Paul
+Revere, one of America's early industrialists, transitioned from
+artisan worker to manager and overseer of others during his long
+metalworking career.1 Like a small number of his postrevolutionary
+contemporaries, he improved his circumstances by becoming a manager
+and owner rather than a laborer, and this shift both stemmed from the
+market for and generated the possibility of the mass manufacture of
+goods.2 In Revere's day, manufacturing itself was a site of public
+debate, pitted against the inherent virtue of agricultural pursuits.
+Tench Coxe, a political economist, wrote in 1810 that “new machines
+and power sources allowed even greater productivity with less labor,
+further underscoring the connection between technology and republican
+virtue.”3 To Coxe's romantic view, these machines  worked “as if they
+were animated beings, endowed with all the talents of their inventors,
+laboring with organs that never tire, and subject to no expense of
+food, or bed, or raiment, or dwelling.”4 Of course human labor of
+maintenance and supervision is implicit in these manufacturing
+machines, but it is again rendered invisible by the rhetoric that the
+machines themselves require no bed or board. At the same time, Coxe's
+use of the word “endowed” should focus our attention on exactly which
+of the “talents” of the inventors have been automatized, and the human
+labor necessarily involved in that conferring of capabilities. 
+
+Arsenal practice was the site of multiple revolutions in U.S.
+manufacturing technology through the 1800s and early 1900s, notably
+the development of the so-called “American system” of interchangeable
+parts. The tight tolerances necessary for interchangeable parts meant
+that weapons made this way remained quite expensive through the late
+1800s, and non-government manufacturers and contractors like Colt
+retained hand filing and fitting procedures; but the government's push
+for these parts—driven by logistics and the need to make easy field
+repairs to firearms—coupled with the radical openness of government
+arsenals to visitors, slowly spread the manufacturing techniques to
+private industry.1 Blanchard's many automatic machines for making
+gunstocks were of particular importance, but a wide variety of
+machinery was implemented in the gun-making process at Harper's Ferry,
+despite the prevalence of skilled artisans trained in
+Pennsylvania-Kentucky gun-smithing traditions.2 Not only did armorers
+and managers resist the industrialization of their craft, some of the
+machines themselves resisted the displacement of workers:  while
+Nash's barrel-turning machine in part mechanized the production of
+barrels of standardized dimensions, it consisted of a lathe on a
+wooden frame, with human-operated props to hold the barrel in place.3
+The worker also had to continually measure the barrel with a caliper,
+and adjust the device's chisel appropriately.4 This gradual
+implementation of mechanized labor was continued in further machines
+produced by Hall. His straight-cutting machine, an early version of a
+milling machine, had as its distinctive feature the ability to be
+tended by “common hands” without a loss of accuracy.5 While certain
+competencies were transferred with this device from the skilled worker
+to the technical apparatus, human oversight and operation was still
+integral to the production of weaponry using the new technology.
+
+The same exchange of competencies characterized Ford's assembly line
+production as well, which is cited by David Hounshell as the rise of
+true mass production in America.1 Ford's factory developed fixtures
+and gauges, designed to allow for use by unskilled machine tenders.2
+This process still required human labor and human judgment, but
+reduced the mental level at which this effort operated. As Donald
+Norman writes in Things that Make us Smart—itself, reminiscent of Ed
+Hutchins's cognitive anthropology and work on distributed cognition
+systems—“the world remembers things for us, just by being there.”3 The
+measuring tools of the mechanized assembly line are designed to do
+just this: to visually demonstrate the compliance of a particular part
+to the standard, such that the operation and quality of the final
+product can be assured by  the standardization of its components.4 But
+while the gauge simplifies the assurance of quality, it does not
+automate it: it simply changes the effort from a more complex judgment
+of quality and measurement to a simpler one. While he instituted the
+five-dollar day to attempt to solve labor problems at the factory, and
+compensate laborers for becoming part of the “production machine,”
+Ford also attracted a wide variety of well-educated skilled mechanics
+to his automobile plants.5 Like Evans, Blanchard, Hall, and others
+before them, these mechanics applied their skills to design machines,
+and simplify and standardize work processes. The individual judgment
+of the assembly line laborer was displaced into standardized tools and
+fixtures, built into these technologies by the labor of skilled
+machinists and designers.
+
+Despite this, so much of Taylorism was fundamentally about new forms
+of human labor, and in some cases whole new classes of laborers. To
+make use of the technological advances in machining, and to reduce
+inventory waste, the workplace required a “complete reorganization.”1
+In its implementation, Watertown Arsenal constructed a new planning
+room. Management had to sign all route sheets, to enforce the movement
+of all processes through planning infrastructure as a move to prevent
+the worker tendency to bypass the planning room.2 New schedules were
+developed for each worker. In order to perform these tasks, new
+managerial roles were necessary. Taylorism created “new managerial
+functions” performed by “new classes of people with new titles and
+more clearly specified responsibilities.”3 Whereas previously most
+managing had been done by the master mechanic and the foremen, an
+engineering division now drew up lists of expenditures, a purchasing
+division ordered parts, the planning room received the bill, drawings,
+and the list of parts.4 The role of foremen in the machine shop was
+eliminated, and instead transferred to workers in the planning room.
+To oversee the floor a new class of worker was created, “gang-bosses”
+with less authority than the foremen they replaced.5 A focus on the
+people—who are they? where are they? what are they doing?—shows that
+one of the fundamental and enduring characteristics of Taylor's
+system, the expansion of management roles and the further division of
+labor, is not about mechanical automation but about new and altered
+types of human work. Industrial processes in the early 1900s continued
+the removal of management and strategic decision making from the
+workers most physically engaged in product production, installing it
+instead within formal organizational structures and the employees that
+constituted them. This is analogous to the current process of
+self-driving vehicle design: automated systems substitute the
+mechanical process of controlling the vehicle inputs with the new task
+of the intellectual supervision of the driving system. This new task
+is not necessarily simpler or easier, though it may be intended to be,
+but can be seen as representing a management, rather than labor, role
+in vehicle operations.
+
+This pattern of delayed recognition and contingent change repeats for
+numerical control in assembly line production. Numerical control (NC),
+developed in the 1940s and 1950s as an outgrowth of World War II
+research into feedback systems, slowly began to produce industrial
+robots that could perform factory tasks without direct human
+intervention. Robots slowly began to replace assembly line jobs such
+as spray painting and welding, but adoption was gradual, with only
+about 6,000 robots in use in American factories by the mid 1970s.1 The
+reason for this was that industrial robots, while automating tasks,
+had a way of generating large contingents of skilled human laborers
+who still needed to be paid for their services. Industrial robots were
+complicated, and needed a variety of skilled workers to tend them, and
+to repair them when the broke down. These early experiments did not
+increase profits because of the volume of highly skilled labor needed
+to keep the machines operating.2 The development of NC machines
+proceeded with a specific interest in eliminating skilled workers, but
+the jobs that disappeared were largely unskilled or semi-skilled
+laborers.3 And while Norbert Weiner, in his 1950 book The Human Use of
+Human Beings, prophesied the end of “deadly uninteresting” jobs, which
+would be mechanized within 20 years, such changes have still not
+totally come to pass.4 To compound the problem, new industries of
+skilled workers—record-and-playback machine designers, and NC machine
+programmers—sprang up to furnish factories with their tools.
+
+The Air Force's Integrated Computer-Aided Manufacturing program (ICAM)
+brings to light further complexities in the story of the automated
+factory. As we have seen, the process of standardization,
+mechanization, and automation has been a process of attempting to
+wrest control of the production of components from those closest to
+handling them and concentrating it in the hands of management. But
+ICAM attempted to aid shop floor automation by automating certain
+management functions, “to try to reduce the enormous indirect costs
+that have resulted from the effort to reduce labor costs and remove
+power and judgment from the shop floor,” costs that have continued to
+dog new rationalization strategies.1 ICAM, like the mythical
+ouroboros, sought to offer automation as the “solution to the problems
+generated by automation,” providing automated scheduling functions,
+inventory control, and design tools to “provide better management
+control” and “free management from excessive routine duties to do
+creative work”—the creative work that the management had attempted to
+place in their own hands, in the first place, through earlier
+processes of rationalization.2 Automation, Noble's ICAM example shows,
+can be used both to routinize work—for the manual laborer—and to
+eliminate the routine in favor of the creative—for managers and newly
+generated classes of creative workers. 
+
+automation may look very different depending on where in the hierarchy
+a person happens to fall
+
+Ironically, Diebold makes that point himself. In his 1953 essay
+“Automation – the new technology” he states that, despite contemporary
+models like the Rockford Ordinance plant that were publicly hailed as
+fully automated, “there will be no worker-less factories as a result
+of automation.”1 While roles change, human involvement remains. As he
+describes in greater detail:
+
+/begin{quote}
+“Automatic factories cannot be completely workerless factories. The
+examples that exist today show this to be true. For instance, the
+atomic processing plant at Oak Ridge, although operated by a few girls
+at a control panel, employs many hundreds of maintenance men. . . .
+considerable labor is required to disassemble a piece of machinery in
+order to remove a defective piece, however well designed the machine
+may be. . . . And it should also be borne in mind that the replaced
+parts must frequently be returned to the manufacturer for disassembly
+and repair, thus requiring much human labor in another location. ”1
+/end{quote}
+
+Therein lies the promise of automated or partially automated vehicles:
+to provide to us a greater measure of creativity in the act of
+driving, to remove some of the “menial” and routine tasks of manual
+control in favor of strategic decision-making. In this analogy, the
+driver goes from being the manual laborer to the creative manager. But
+despite a focus on relieving tedium, this is not the way these systems
+have primarily been envisioned. Instead, in the process of following
+the dream of fully automated operation—where the human labor has been
+entirely removed from the shoulders of the person in the vehicle, and
+displaced to the invisible labors of mapping, programming, and
+monitoring—we are designing systems where the “driver” becomes ever
+more like the laborer at Brooks Park, present largely to ensure the
+operation of capital-intensive machinery, burdened with new but
+perhaps even more menial tasks of machine tending.1 This approach
+presents serious risks. It may be some time before the human inside
+the car can be entirely disengaged with the driving task,2 if that is
+even something we want as a culture, which means an interim period of
+operation potentially characterized by “hours of boredom punctuated by
+moments of terror.”3 The danger of human inattention,4 which has shown
+up in aircraft automation with sometimes disastrous results, is
+actually pushing aircraft manufacturers to more fully involve the
+human in the process of flying, even as cockpits become more and more
+computerized.5 And by focusing on ever more automation, rather than
+appropriate automation, we may also be removing some of the parts of
+driving that are most enjoyable: by replacing the skilled craftsman
+with the automaton and the machine tender, we risk making driving
+sterile and dull. 
+
+%% 1.2) place to introduce the brief overview of AI history, of what goes
+%% into the different approaches
+%% --starting from historical visions of automata (1 p)
+%% --classical symbolic approaches / physical symbol system (3 p)
+%% ----which in a way we have returned to today w/ explicit mapping
+%% --Rodney Brooks subsumption architecture and ``world is its own best
+%% model'' (3 p)
+%% --Leaning heavily on H. R. Ekiba and his approach to illuminating the
+%% unstated assumptions of AI research areas (2 p)
+
+
+%% 2.1) data gathering and mapping
+%% --this approach presupposes large amounts of data collection (maps),
+%% and opens the way to more information about the passengers (2 p)
+%% --see Google's patents in particular which talk about sensing things
+%% like the number of passengers (4 p)
+
+
+%% 2.2) machine vision
+%% --pull from the Spectator paper (4 p)
+
+
+%% 2.2) what standard of safety? 
+%% --better than an average person? or better than the best people? (1 p)
+%% --human problems with using projected statistics to define policy:
+%% does it make people feel better to know a system is statistically
+%% safer when they are uncomfortable with it? see cars/planes for example
+%% (3 p)
+%% -->perspective of caution? or  ``losing lives every day'' that
+%% could be saved?
+%% ----how much risk is legitimate?? (2 p)
+%% --airlines as a place where we see the different dimensions of
+%% statistical safety vs. passenger's feelings of safety (3 p)
+%% ---drawing from PARC/CAST documents
+
+
+%% 2.3) functionalism over understanding
+%% --for better or worse these devices are not humanlike in their
+%% understanding
+%% ----AI winters & the rise of commercial ML AI with much smaller goals
+%% (see Wired articles, etc) (3 p)
+%% --the ideology that drives them is an engineering mindset: ``just make
+%% it work'' (2 p)
+%% --pulling the quote from my USC talk: also interesting to note
+%% regarding 1.2 that it seems to expect a humanoid robotic chauffeur in
+%% a normal car! (1 p)
+%% -and of course interviews with people (Ryan Chin; Walker Smith etc.
+%% where they matter to this type of vehicle)
+
 
