--- a/chap2.tex
+++ b/chap2.tex
@@ -1,4 +1,36 @@
 \chapter{Technological Realities}
 
-Text.
+Technological Realities (27 p)
+
+1) bring in the telerobotics/supervisory control literature
+-why supervisory control? and where is it used? (5 p)
+-examine the issue of deskilling vs. the ``irony of automation'' well
+known in Human Factors, in which increased automation actually
+increases human load (2 p)
+-but SC allows for particular combinations of human skills and machine
+competencies (1 p)
+--used all over industry, aviation, undersea (2 p)
+
+2)Other problems:
+--Göde Both and reluctance to use Machine Learning (1 p)
+---brittle, unpredictable, difficult to ``tune''
+---airlines/Mil worried about the same thing: need better VV&T, models
+for testing (3 p)
+--Mapping and route issues
+---Google car needs detailed 3D maps in order to operate (1 p)
+---also rain, snow, weather (1 p)
+--Sensors issues and inability to distinguish crushed newspaper from
+rock (1 p)
+---requires a lot of other information, more than simple physical
+volume
+---object identification work in machine vision is slowly progressing,
+but then we hit the above problems of VV&T for such models (2 p)
+
+3) situate the moonshot approach (which may actually be easier in some
+senses but less socially acceptable) and the mixed approach in a way
+that does not support a teleology of autonomous vehicle development
+(think Sheridan's graph of telerobotics, not the SAE's 5 stages) (4 p)
+--in historical context of previous systems that are wholly or
+partially autonomous (4 p)
+
 
