--- a/intro.tex
+++ b/intro.tex
@@ -1,4 +1,32 @@
 \chapter{Introduction}
 
-Text.
+Intro / Visions / Public Faces (14 p)
+
+>>>Story hook: currently, this calls out to be a brief historical
+sweep through self-driving car dreams from the 1920s/30s to the
+present; but it could also begin with the reveal of the Google car; or
+the Youtube video of the guy in the Mercedes tricking the lane assist
+function to drive for him on the highway (2 p)
+
+1) establish what the technology is: in its varied types and
+dimensions: this is not ONE THING or ONE IDEA (4 p)
+---INCLUDING historical models: see Erkki Huhtamo, media archaeology
+(2 p)
+
+2) deal in general with some of the popular portrayals of the
+technology: the nature of the self-driving car as it will appear in
+the near future is not self-evident, no matter how loud Google's voice
+or how large their investment (4 p)
+---you would be excused for thinking XYZ, based on what you read in
+the popular press
+---but this is a flawed picture of the future, and an incomplete
+picture of the tech
+
+3) and shift to the lead-in to the main thesis sections: that these
+technologies or visions of them enact certain ideologically charged
+activities (through their epistemologies; or even to some extent
+ontological position of a self-driving car that ``knows'' nothing);
+and that these can be traced through the histories and current
+discourses of the fields involved, and lead us to expect very
+different social/cultural impacts (2 p)
 
