added some bib entries, working on content

--- a/chap3.tex
+++ b/chap3.tex
@@ -14,7 +14,7 @@ environments, except in very weak forms)
 -the street stands to be re-shaped again, subtly, by the capabilities
 of our vehicles (1 p)
 -this is the place to bring together the AI, Human Factors,
-Law/Policy, and STS/Anthro background (specifically on technology &
+Law/Policy, and STS/Anthro background (specifically on technology \&
 people, edges of HCI, Andy Clark on natural-born cyborgs) to paint the
 whole picture of the forces in play (2 p, v. philosophical)
 
