--- a/main.bib
+++ b/main.bib
@@ -3,6 +3,38 @@
 	# "\newcommand{\singleletter}[1]{#1} "
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 
+
+@ARTICLE{IHSstudy,
+   key = "self",
+   author = "",
+   title = "{S}elf-{D}riving {C}ars {M}oving into the {I}ndustry's {D}river's {S}eat - {IHS} {A}utomotive {S}tudy",
+   journal = {Automotive Industries},
+   month = "January",
+   year = 2014,
+   pages = "507-508",
+}
+
+@ARTICLE{clytton,
+   author = {Charlotte Lytton},
+   title = {Do driverless cars need to make their passengers feel like drivers?},
+   journal = {CNN},
+   month = "November 27",
+   year = 2014,
+}
+
+@ARTICLE{pross,
+   author = {Phillip E. Ross},
+   title = "{D}riverless {C}ars: {O}ptional by 2024, {M}andatory by 2044",
+   journal = {IEEE Spectrum},
+   month = "May 29",
+   year = 2014,
+}
+
+
+
+
+
+
 @ARTICLE{article-minimal,
    author = {L[eslie] A. Aamport},
    title = {The Gnats and Gnus Document Preparation System},
