--- a/chap1.tex
+++ b/chap1.tex
@@ -11,22 +11,24 @@ Ideologies (and their stakes) (32 p)
 Human technological progress since antiquity has
 involved continual re-negotiations of human labor and the roles of
 animals and mechanisms in the labor process. Due to a confluence
-of factors—the continuing miniaturization of computing technology, new
+of factors---the continuing miniaturization of computing technology, new
 advances in machine learning and artificial intelligence algorithms, a
-gradual increase in battery capacities, faster wireless networks—the
+gradual increase in battery capacities, faster wireless networks---the
 horizons for everyday automation are broader than ever. 
 
 The popular visions of this technology focus on the future: the
 idea that in just two decades the majority of cars on the road will be
 fully autonomous. Even respected business information and consulting
-bodies have bought into this dream.1 In these vehicles, the users would
+bodies have bought into this dream.\footnote{For example, the IHS
+  predicts 54 million such vehicles by 2035, which is not as extreme,
+  but still a sizable fraction of road vehicles \cite{IHSstudy}} In these vehicles, the users would
 step in, select a destination, and would then be free to read, sleep,
 watch a movie, answer emails, or otherwise occupy themselves without
 needing to pay any attention to the operation of the vehicle. This
 vision has its benefits, but clearly makes many people nervous about
-ceding their driving agency to a computer system.2 News articles fret
+ceding their driving agency to a computer system.\cite{clytton} News articles fret
 about what will happen when no one knows how to drive manually any
-more,3 a classic fear of “de-skilling” that is implicated in so many
+more,\cite{pross} a classic fear of ``de-skilling'' that is implicated in so many
 other implementations of computers. Furthermore, coexistence with
 autonomous or automated systems is presented as a fundamentally new
 situation, as if human beings had never before had to work and live
