--- a/chap2.tex
+++ b/chap2.tex
@@ -14,7 +14,7 @@ competencies (1 p)
 2)Other problems:
 --Göde Both and reluctance to use Machine Learning (1 p)
 ---brittle, unpredictable, difficult to ``tune''
----airlines/Mil worried about the same thing: need better VV&T, models
+---airlines/Mil worried about the same thing: need better VV\&T, models
 for testing (3 p)
 --Mapping and route issues
 ---Google car needs detailed 3D maps in order to operate (1 p)
@@ -24,7 +24,7 @@ rock (1 p)
 ---requires a lot of other information, more than simple physical
 volume
 ---object identification work in machine vision is slowly progressing,
-but then we hit the above problems of VV&T for such models (2 p)
+but then we hit the above problems of VV\&T for such models (2 p)
 
 3) situate the moonshot approach (which may actually be easier in some
 senses but less socially acceptable) and the mixed approach in a way
