lots of additions to 1.1; mostly done minus more cutting for length

--- a/main.bib
+++ b/main.bib
@@ -30,6 +30,131 @@
    year = 2014,
 }
 
+@ARTICLE{simonite,
+   author = {Tom Simonite},
+   title = "{L}azy {H}umans {S}haped {G}oogle's {N}ew {A}utonomous {C}ar",
+   journal = {MIT Technology Review},
+   month = "May 30",
+   year = 2014,
+}
+
+@ARTICLE{robotworx,
+   key = "robot vehicles",
+   author = "",
+   title = "{R}obot {V}ehicles",
+   journal = "{R}obot{W}orx"
+   month = "Accessed December 11",
+   year = "2014",
+}
+
+@ARTICLE{wyegrist,
+   key = "timeline",
+   author = "",
+   title = "{T}imeline",
+   journal = "{W}ye {G}rist {M}ill website"
+   month = "Accessed December 11",
+   year = "2014",
+}
+
+@BOOK{dieboldImpact,
+   author = "John Diebold",
+   title = "{A}utomation: {I}ts {I}mpact on {B}usiness and {L}abor",
+   publisher = "National Planning Association",
+   address = "Washington, D.C.",
+   month = "May",
+   year = "1959",
+}
+
+@ARTICLE{dieboldNew,
+   author = "John Diebold",
+   title = "{A}utomation-{T}he {N}ew {T}echnology",
+   journal = {Harvard Business Review},
+   volume = 31,
+   number = 6,
+   month = "Nov/Dec",
+   year = 1953,
+   pages = "63-64",
+}
+
+@UNPUBLISHED{roesmithYankee,
+   author = "Merritt Roe Smith",
+   title = "{Y}ankee {A}rmorers and the {U}nion {W}ar {M}achine",
+   note = "(Author's draft, July 1, 2014),
+}
+
+@BOOK{roesmithHarpers,
+   author = "Merritt Roe Smith",
+   title = "{H}arper's {F}erry {A}rmory and the {N}ew {T}echnology",
+   publisher = "Cornell University Press",
+   address = "Ithaca, NY",
+   year = "1977",
+}
+
+@BOOK{hounshell,
+   author = "David A. Hounshell",
+   title = "{F}rom the {A}merican {S}ystem to {M}ass {P}roduction",
+   publisher = "Johns Hopkins University Press",
+   address = "Baltimore, MD",
+   year = "1984",
+}
+
+@BOOK{normanThings,
+   author = "Donald Norman",
+   title = "{T}hings {T}hat {M}ake {U}s {S}mart: {D}efending {H}uman {A}ttributes in the {A}ge of the {M}echnology",
+   publisher = "Addison-Wesley Pub. Co.",
+   address = "Reading, MA",
+   year = "1993",
+}
+
+@BOOK{aitken,
+   author = "Hugh G. J. Aitken",
+   title = "{T}aylorism at {W}atertown {A}rsenal: {S}cientific {M}anagement in {A}ction",
+   publisher = "Harvard University Press",
+   address = "Cambridge, MA",
+   year = "1960",
+}
+
+@BOOK{nyeAmericas,
+   author = "David E. Nye",
+   title = "{A}merica's {A}ssenbly {L}ine",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = "2013",
+}
+
+@BOOK{nobleForces,
+   author = "David F. Noble",
+   title = "{F}orces of {P}roduction: {A} {S}ocial {H}istory of {I}ndustrial {A}utomation",
+   publisher = "Knopf",
+   address = "New York",
+   year = "1984",
+}
+
+@INBOOK{evansMillguide,
+   author = "Oliver Evans",
+   title = "{T}he {Y}oung {M}ill-{W}right and {M}iller's {G}uide",
+   publisher = "Lea & Blanchard",
+   address = "Philadelphia",
+   edition = "12th",
+   year = "1848",
+   pages = "203",
+}
+
+@BOOK{coxe,
+   author = "Tench Coxe",
+   title = "{S}tatement of the {A}rts and {M}anufactures of the {U}nited {S}tates of {A}merica for the year 1810",
+   publisher = "A. Cornman",
+   address = "Philadelphia",
+   year = "1814",
+}
+
+@BOOK{martello,
+   author = "Robert Martello",
+   title = "{M}idnight {R}ide, {I}ndustrial {D}awn: {P}aul {R}evere and the {G}rowth of {A}merican {E}nterprise",
+   publisher = "Johns Hopkins University Press",
+   address = "Baltimore, MD",
+   year = "2010",
+}
 
 
 
